@@ -240,6 +240,7 @@ let command_cleanup =
     "--out", Arg.Set_string out_filename, "output filename";
     "--decode-streams", Arg.Unit (fun () -> Params.global.Params.decode_streams <- true), "decode content of all streams";
     "--relax-streams", Arg.Unit (fun () -> Params.global.Params.relax_streams <- true), "relax unsupported filters (warning instead of fatal error)";
+    "--simplify-info", Arg.Unit (fun () -> Params.global.Params.simplify_info <- true), "remove non-standard entries from /Info dictionary";
     "--verbose", Arg.Unit (fun () -> Params.global.Params.verbose <- true), "verbose mode";
     "--debug", Arg.Unit (fun () -> Params.global.Params.debug <- true), "debug mode";
   ] in
